--- a/style.css
+++ b/style.css
@@ -1,101 +1,236 @@
+@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+
 :root {
+    /* Primary */
+    --Purple: hsl(259, 100%, 65%);
+    --Light-red: hsl(0, 100%, 67%);
+    /* Neutral */
     --White: hsl(0, 0%, 100%);
     --Off-white: hsl(0, 0%, 94%);
     --Light-grey: hsl(0, 0%, 86%);
     --Smokey-grey: hsl(0, 1%, 44%);
     --Off-black: hsl(0, 0%, 8%);
-    --Purple: hsl(259, 100%, 65%);
-    --Light-red: hsl(0, 100%, 67%);
-  }
-  
-  @font-face {
-    font-family: Pop;
-    src: url(./assets/fonts/Poppins-Regular.ttf);
-  }
-  * {
-    font-family: Pop !important;
-  }
-  body {
-    display: flex;
-    justify-content: center;
-    background-color: var(--Off-white);
-    align-items: center;
-    min-height: 100vh;
-  }
-  .container {
-    background-color: var(--White);
-    width: 420px;
-    max-width: 80%;
-    padding: 30px;
-    position: relative;
-    border-bottom-right-radius: 150px;
-  }
-  input {
-    width: 70px;
-    padding: 10px;
-    border-radius: 5px;
-    border: 2px solid var(--Off-white);
-    /* border: none; */
-    outline: none;
-  }
-  input:focus {
-    border: 2px solid var(--Purple);
-  }
-  
-  small {
-    color: red;
-    font-size: 0.6rem;
-    font-weight: bold;
-    text-transform: capitalize;
-  }
-  .submit-btn {
-    width: 70px;
-    height: 70px;
-    padding: 20px;
-    display: flex;
-    background-color: var(--Purple);
-    justify-content: center;
-    align-items: center;
-    border: none;
-    border-radius: 50%;
-    position: absolute;
-    right: 30px;
-    top: 80px;
-    cursor: pointer;
-  }
-  .submit-btn:hover {
-    background-color: black;
-  }
-  .output span {
-    font-size: 2.75rem;
+}
+
+h1, span {
+    font-size: 6.25rem;
+    line-height: 6.638rem;
+    letter-spacing: 0px;
+    font-weight: 800;
+}
+
+span {
     color: var(--Purple);
-    font-style: italic;
-  }
-  .input-container {
+}
+
+body {
+    font-family: "Poppins", sans-serif;
+    font-size: 32px;
+    background: linear-gradient(to bottom right,  var(--Purple), var(--Light-red));
+}
+
+main {
+    margin: 154px auto;
+    padding: 56px 56px 82px;
+    width: 840px;
+    background-color: var(--White);
+    border-radius: 28px;
+    border-bottom-right-radius: 200px;
+}
+
+.user-input {
+    display: flex;
+    justify-content: space-between;
+    margin-right: 184px;
+}
+
+.input-area {
     display: flex;
     flex-direction: column;
-    margin-left: 20px;
-    margin-bottom: 20px;
-  }
-  .input-flex {
+    gap: 10px;
+}
+
+label {
+    text-transform: uppercase;
+    color: var(--Smokey-grey);
+    font-size: 0.75rem;
+    font-weight: 700;
+    letter-spacing: 4px;
+}
+
+input {
+    padding: 17px 24px;
+    width: 158px;
+    font-size: 1.8rem;
+    font-weight: 900;
+    border: none;
+    border-radius: 7px;
+}
+
+input::placeholder {
+    color: rgb(132, 132, 132);
+    font-weight: 900;
+}
+
+.input-year, .input-month, .input-day {
+    border: 1px solid var(--Light-grey);
+    border-radius: 7px;
+}
+
+.submit-form {
     display: flex;
-    border-bottom: 2px solid var(--Off-white);
-    margin-bottom: 20px;
-  }
-  @media (max-width: 768px) {
+}
+
+.form-submit {
+    display: flex;
+    align-items: center;
+    position: relative;
+    margin-top: 48px;
+}
+
+.line {
+    background-color: var(--Light-grey);
+    height: 2px;
+    width: 100%;
+}
+
+button {
+    background-color: var(--Purple);
+    border: none;
+    border-radius: 50%;
+    height: 96px;
+    width: 96px;
+    cursor: pointer;
+    transition: 0.2s ease-in-out;
+    position: absolute;
+    right: 0;
+    padding: 20px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+button:hover {
+    background-color: var(--Off-black);
+    box-shadow: rgba(50, 50, 93, 0.25) 0px 13px 27px -5px, rgba(0, 0, 0, 0.3) 0px 8px 16px -8px;
+}
+
+.result-section {
+    font-style: italic;
+    margin-top: 48px;
+}
+
+.result {
+    display: flex;
+    gap: 10px;
+}
+
+.error-message {
+    color: var(--Light-red);
+    font-style: italic;
+    font-size: 13px;
+}
+
+.error-day, .error-month, .error-year {
+    display: none;
+}
+
+@media screen and (max-width: 850px) {
+    h1, span {
+        font-size: 5.25rem;
+    }
+    main {
+        width: 90%;
+    }
+    .user-input {
+        margin-right: 0;
+        justify-content: space-between;
+    }
+    .input-area {
+        width: 30%;
+    }
     input {
-      width: 80%;
+        width: 100%;
     }
-    .output span {
-      font-size: 1.75rem;
+    .form-submit {
+        margin-top: 74px;
     }
-    .submit-btn {
-      width: 40px;
-      height: 40px;
-      right: 40%;
-      top: 90px;
+    button {
+        left: 50%;
+        transform: translateX(-50%);
     }
-    .submit-btn img {
-      transform: scale(0.5);
+    .result-section {
+        margin-top: 50px;
     }
-  }
+}
+
+@media screen and (max-width: 650px) {
+    h1, span {
+        font-size: 4rem;
+        line-height: 5.348rem;
+    }
+    main {
+        padding: 44px;
+    }
+    input {
+        font-size: 1.5rem;
+    }
+    button {
+        height: 80px;
+        width: 80px;
+    }
+    button img {
+        width: 42px; 
+    }
+}
+
+@media screen and (max-width: 500px) {
+    h1, span {
+        font-size: 3.2rem;
+        line-height: 4.938rem;
+    }
+    main {
+        padding: 50px 30px;
+        border-bottom-right-radius: 150px;
+    }
+    input {
+        font-size: 1.25rem;
+    }
+    .form-submit {
+        margin-top: 74px;
+    }
+    .result-section {
+        margin-top: 40px;
+    }
+}
+
+@media screen and (max-width: 400px) {
+    h1, span {
+        font-size: 2.7rem;
+        line-height: 4rem;
+    }
+    label  {
+        letter-spacing: 2px;
+    }
+    input {
+        margin-bottom: 3px;
+        height: 98%;
+        padding: 17px 14px;
+    }
+    .form-submit {
+        margin-top: 60px;
+    }
+    button {
+        width: 64px;
+        height: 64px;
+    }
+    button img {
+        width: 26px;
+    }
+}
